--- a/Analysis/Function_representation.Rmd
+++ b/Analysis/Function_representation.Rmd
@@ -8,7 +8,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_knit$set(root.dir = setwd("/Users/Usuario/Desktop/Bioinformatica/Practicas/Functional_tables/functional.tables/"))
+knitr::opts_knit$set(root.dir = setwd("/Users/Usuario/Desktop/Bioinformatica/Practicas/Practicas/Analysis/"))
 ```
 
 ## Loading necessary libraries
@@ -102,16 +102,10 @@ kegg_by_sample <- melt(kegg_by_sample, id.vars = "PClass")
 pale <- distinctColorPalette(30)
 ggplot(kegg_by_sample, aes(x=variable, y = value, fill = PClass)) + geom_bar(position = "fill", stat = "identity") + theme(text = element_text(size = 7), axis.text.x = element_text(size = 5, angle = 90, vjust = 0.5, hjust=1), legend.key.size = unit(0.3, "cm")) + labs(x = NULL, y = NULL, fill = "KEGG class") + guides(fill=guide_legend(ncol=1)) + scale_fill_manual(values = pale)
 
-
-
-
-
 ggsave(path = "/Users/Usuario/Desktop/Bioinformatica/Practicas/Functional_tables/functional.tables/", filename = "KEGG_figure.png", device = "tiff", dpi = 300)
 ```
 
-<img src="Figures/KEGG_figure.png" />
 
-![](Figures/KEGG_figure.png)
 
 
 
