--- a/Analysis/Taxonomic_classification.Rmd
+++ b/Analysis/Taxonomic_classification.Rmd
@@ -73,14 +73,14 @@ f_kegg_scg2 <- f_kegg_scg
 f_kegg_scg2$sum <- rowSums(f_kegg_scg)
 f_kegg_scg2 <- f_kegg_scg2 %>%
   select(0, 51)
-f_kegg_scg2 <- tibble::rownames_to_column(f_kegg_scg2, "KO")
+f_kegg_scg <- tibble::rownames_to_column(f_kegg_scg, "KO")
 
 #Merge all
-all_data_kegg1 <- merge(all_data_kegg, f_kegg_scg2, by = "KO")
+all_data_kegg1 <- merge(all_data_kegg, f_kegg_scg, by = "KO")
 
 
 # By sample
-kegg_by_sample <- all_data_kegg2 %>%
+kegg_by_sample <- all_data_kegg1 %>%
   select(-1,-2,-3)
 kegg_by_sample <- kegg_by_sample %>%
   group_by(PClass) %>%
@@ -98,6 +98,50 @@ kegg_by_sample <- melt(kegg_by_sample, id.vars = "PClass")
 pale <- distinctColorPalette(30)
 ggplot(kegg_by_sample, aes(x=variable, y = value, fill = PClass)) + geom_bar(position = "fill", stat = "identity") + theme(text = element_text(size = 7), axis.text.x = element_text(size = 5, angle = 90, vjust = 0.5, hjust=1), legend.key.size = unit(0.3, "cm")) + labs(x = NULL, y = NULL, fill = "KEGG class") + guides(fill=guide_legend(ncol=1)) + scale_fill_manual(values = pale)
 ```
+
+
+## COG
+
+```{r}
+icm_cog_scg
+cog_categories <- read.delim("functional.tables/COG_categories/letra-categorias.txt")
+cog_to_cat <- read.delim("functional.tables/COG_categories/cog_result_table_all.tsv")
+cog_to_cat <- cog_to_cat %>%
+  select(-1,-2,-5)
+
+cog_to_cat$category <- cog_categories$Categoria[charmatch(cog_to_cat$Cat, cog_categories$Letra)]
+
+
+
+
+
+icm_cog_scg2 <- icm_cog_scg
+icm_cog_scg2$sum <- rowSums(icm_cog_scg)
+icm_cog_scg2 <- icm_cog_scg2 %>%
+  select(0, 51)
+icm_cog_scg <- tibble::rownames_to_column(icm_cog_scg, "COG")
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ## GO-SLIM
